# pymacro

./: README.md  pyproject.toml
pymacro/: __init__.py  pymacro.py
tests/: test_pymacro.py
