[tool.poetry]
name = "python-pymacro"
version = "0.1.0"
description = "A python library that can be used to have macros inside python functions through decorators."
authors = ["AbooMinister25 <aboominister@gmail.com>"]
repository = "https://github.com/AbooMinister25/pymacro"
readme = "README.md"
packages = [
    { include = "pymacro" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"